Version 1.0.0 (not yet released):
- delivery_method_mda_open(): flush stdout and stderr before calling the MDA,
  so that its output won't be intermingled with mpop's output.
- Fixed a comment in net.h.
- net_get_canonical_hostname(): Only call freeaddrinfo() if getaddrinfo()
  succeeded. Reported and fixed by Raúl Núñez de Arenas Coronado.
- Removed the simple_mbox delivery method because it is unnecessary.
- Minor documentation improvements.

Version 0.8.4:
- Minor Win32 portability/cross-compilation updates.
- Gnulib update.
- Documentation updates.
- The only_new command and --only-new option were re-added, but with slightly
  different meaning and a different default value. The default behaviour is
  completely compatible to all 0.8.x version.
- Fix UIDLS file handling: make sure that uids appear in ascending order.
  Older versions wrote unsorted uid lists. If such a file is read, detect this
  and sort the lists.
- Print --debug output to stdout instead of stderr, since it is requested
  output. Noted by Aliaksandr Lakhanko.
- Changes taken from msmtp:
  - configure.ac: Rely on PKG_CHECK_MODULES to find GSASL, do not fall back to
    manual detection, to prevent using an incompatible version of GSASL.
    Problem reported by Jari Aalto.
  - Gnulibs sysexit_.h now defines EX_OK; there's no need to use a locally
    modified version anymore.
  - Use a locally modified version of gnulibs sysexit_.h that defines EX_OK to
    0, since the gnulib maintainers apparently won't fix this file.
    Include the sysexits.h header after all other system headers to override 
    previous definitions of EX_OK on systems that use EX_OK for other purposes.
    This is needed on Interix, reported by Ben Collver.

Version 0.8.3:
- gnulib update.
- Expect sorted UIDLS files. This means that files written by versions prior
  to 0.5.0 are not accepted anymore.
- Fixed -d and -P output for "delivery" when maildir is used.
- Changes taken from msmtp: